<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">This app is made as a submission for Dicoding.</string>
    <string name="title_welcome_page">Welcome to Story App</string>
    <string name="title_signup_page">Complete your registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your login details</string>
    <string name="title_login_page">Share your stories!</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Stories!</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Log Out</string>
    <string name="enter_password">Enter your Password</string>
    <string name="password_8digit">Password must be at least 8 characters</string>
    <string name="enter_email">Enter your Email</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="enter_name">Enter your Name</string>
    <string name="invalid_name">Please enter your name correctly</string>
    <string name="fill_form">Check your form</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="description">Description</string>
    <string name="correct_email">Use correct Email!\n</string>
    <string name="account_success">Account Successfully Created!</string>
    <string name="continue_reg">continue</string>
    <string name="regis_fail">Registration Failed</string>
    <string name="email_taken">Email has already taken</string>
    <string name="fill_field_warning">Please fill the field</string>
    <string name="login_success">Login Success\n</string>
    <string name="login_failed">Login failed, please check your password or email</string>
    <string name="account_not_found">Account not found</string>
    <string name="add_your_story">Add your story!</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="register_success">Registration Success</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_story">Upload your story</string>
    <string name="preview_image_desc">Preview Image</string>
    <string name="empty_image_warning">Please select your Image!</string>
    <string name="error_message_load_data">Failed to load stories. Please try again later.</string>
    <string name="error_no_token">No token available. Please log in again.</string>
    <string name="error_loading_data">An error occurred while loading data.</string>
    <string name="refresh">Refresh</string>
    <string name="success_load_data">Data has been loaded successfully.</string>
    <string name="empty_description_warning">Description cannot be empty.</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="network_error">Network error, please try again.</string>
    <string name="name_cannot_be_empty">Name cannot be empty.</string>
    <string name="error_register">Something went wrong, try again.</string>

    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="share_your_location">Share your location?</string>
    <string name="retry">Retry</string>
    <string name="failed_image_desc">Failed</string>
    <string name="onboard">onboard</string>
</resources>